<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/error_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_title"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_subtitle"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/error_button"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_11sdp"
        android:background="?attr/colorPrimarySurface"
        android:textColor="?attr/colorPrimary"
        />
</LinearLayout>