<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".presentation.ui.fragments.SavedQuotesFragment"
    android:id="@+id/frame"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_45sdp">

                <LinearLayout
                    android:id="@+id/collections_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:paddingHorizontal="@dimen/_11sdp"
                        android:text="@string/fragment_collection_title"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/draw_rectangle_rounded_bordered"
                            android:baselineAligned="false"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingHorizontal="@dimen/_11sdp">

                            <!-- Left side : Quickie desc + some details (count of collections, ...) -->
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <com.google.android.material.chip.ChipGroup
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_5sdp">

                                    <com.google.android.material.chip.Chip
                                        android:id="@+id/collections_count"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:backgroundTint="?attr/colorOnSecondary" />

                                    <com.google.android.material.chip.Chip
                                        android:id="@+id/quotes_count"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:backgroundTint="?attr/colorOnSecondary"
                                        />
                                </com.google.android.material.chip.ChipGroup>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/other_hey"
                                    android:textColor="?attr/colorOnSurface"
                                    android:textSize="@dimen/_17sdp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_5sdp"
                                    android:text="@string/other_we_made_list_collections"
                                    android:textColor="?attr/colorOnSurface"
                                    android:textSize="@dimen/_14sdp" />

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/goto_collections"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_11sdp"
                                    android:backgroundTint="?attr/colorSecondary"
                                    app:cardCornerRadius="@dimen/_100sdp"
                                    app:cardElevation="0dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:contentDescription="@string/cd_see_all"
                                        android:padding="12dp"
                                        android:rotation="180"
                                        android:scaleType="centerInside"
                                        android:src="@drawable/ic_go_back"
                                        app:tint="?attr/colorOnSecondary" />
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>

                            <!-- Right side : pattern of images (diamond like) -->
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".6"
                                android:gravity="center">

                                <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginBottom="75dp"
                                        android:gravity="center"
                                        android:orientation="horizontal">

                                        <androidx.cardview.widget.CardView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="bottom"
                                            android:rotation="12"
                                            android:scaleX=".80"
                                            android:scaleY=".80"
                                            app:cardCornerRadius="@dimen/_10sdp"
                                            app:cardElevation="10dp">

                                            <ImageView
                                                android:layout_width="80dp"
                                                android:layout_height="80dp"
                                                android:contentDescription="@string/cd_collection"
                                                android:scaleType="fitXY"
                                                android:src="@drawable/image1" />
                                        </androidx.cardview.widget.CardView>

                                        <androidx.cardview.widget.CardView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:scaleX=".80"
                                            android:scaleY=".80"
                                            app:cardCornerRadius="@dimen/_8sdp"
                                            app:cardElevation="10dp">

                                            <ImageView
                                                android:layout_width="55dp"
                                                android:layout_height="55dp"
                                                android:contentDescription="@string/cd_collection"
                                                android:scaleType="centerCrop"
                                                android:src="@drawable/image4"

                                                />
                                        </androidx.cardview.widget.CardView>
                                    </LinearLayout>

                                    <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:cardCornerRadius="@dimen/_10sdp"
                                        app:cardElevation="10dp">

                                        <ImageView
                                            android:layout_width="100dp"

                                            android:layout_height="100dp"
                                            android:contentDescription="@string/cd_collection"
                                            android:scaleType="fitXY"
                                            android:src="@drawable/image5" />
                                    </androidx.cardview.widget.CardView>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="75dp"
                                        android:gravity="center"
                                        android:orientation="horizontal">

                                        <androidx.cardview.widget.CardView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:scaleX=".80"
                                            android:scaleY=".80"
                                            app:cardCornerRadius="@dimen/_10sdp"
                                            app:cardElevation="10dp">

                                            <ImageView
                                                android:layout_width="55dp"

                                                android:layout_height="55dp"
                                                android:contentDescription="@string/cd_collection"
                                                android:scaleType="centerCrop"
                                                android:src="@drawable/image3" />
                                        </androidx.cardview.widget.CardView>

                                        <androidx.cardview.widget.CardView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="bottom"
                                            android:rotation="12"
                                            android:scaleX=".80"
                                            android:scaleY=".80"
                                            app:cardCornerRadius="@dimen/_10sdp"
                                            app:cardElevation="10dp">

                                            <ImageView
                                                android:layout_width="80dp"
                                                android:layout_height="80dp"
                                                android:contentDescription="@string/cd_collection"
                                                android:scaleType="centerCrop"
                                                android:src="@drawable/image2" />
                                        </androidx.cardview.widget.CardView>
                                    </LinearLayout>

                                </FrameLayout>
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/data_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_11sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:text="@string/fragment_saved_title"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/include_empty"
        layout="@layout/_empty" />

</FrameLayout>